[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yira"
version = "0.1.0"
description = "YugabyteDB YSQL Incident Root Cause Analyzer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
yira = "yira.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yira*"]
